# Crucible-BE

./: .env.template  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  main.py
app/api/v1/: __init__.py
app/api/v1/endpoints/: auth.py  context.py  health.py  models.py  sessions.py  tasks.py
app/core/: config.py  logging.py
config/: init.sql
docs/: PRD.md
