[project]
name = "crucible-be"
version = "0.1.0"
description = "AI Processing Backend Service for Project Tsunami"
requires-python = ">=3.12"
dependencies = [
    # Core Framework
    "fastapi==0.116.1",
    "uvicorn[standard]==0.34.0",
    "gunicorn==23.0.0",
    "pydantic==2.10.5",
    "pydantic-settings==2.6.1",
    
    # Database
    "sqlalchemy==2.0.43",
    "asyncpg==0.30.0",
    "psycopg2-binary==2.9.10",
    "alembic==1.14.0",
    "pgvector==0.3.7",
    
    # Caching & Task Queue
    "redis==5.2.2",
    "celery==5.4.0",
    
    # AI/ML
    "anthropic==1.9.1",
    "openai==1.63.2",
    "tiktoken==0.8.0",
    "langchain==0.3.20",
    "langchain-anthropic==0.3.5",
    "langchain-openai==0.3.5",
    
    # Authentication
    "supabase==2.12.1",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "python-multipart==0.0.20",
    
    # Document Processing
    "pypdf==5.2.1",
    "python-docx==1.1.2",
    "openpyxl==3.1.5",
    "python-magic==0.4.27",
    "Pillow==11.0.0",
    "pytesseract==0.3.14",
    
    # Utilities
    "httpx==0.28.1",
    "python-dotenv==1.0.1",
    "structlog==24.5.0",
    "tenacity==9.0.0",
    "cachetools==5.5.1",
]

[project.optional-dependencies]
dev = [
    "pytest==8.4.0",
    "pytest-asyncio==0.25.2",
    "pytest-cov==6.0.0",
    "pytest-mock==3.15.0",
    "black==25.1.0",
    "ruff==0.9.2",
    "mypy==1.14.2",
    "pre-commit==4.0.3",
    "ipython==8.32.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.black]
line-length = 88
target-version = ['py312']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true