[project]
name = "crucible-be"
version = "0.1.0"
description = "AI Processing Backend Service for Project Tsunami"
requires-python = ">=3.12"
dependencies = [
    # Core Framework
    "fastapi>=0.116.0,<1.0.0",
    "uvicorn[standard]>=0.30.0,<1.0.0",
    "gunicorn>=22.0.0,<24.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "pydantic-settings>=2.0.0,<3.0.0",
    
    # Database
    "sqlalchemy>=2.0.43,<3.0.0",
    "asyncpg>=0.29.0,<1.0.0",
    "psycopg2-binary>=2.9.9,<3.0.0",
    "alembic>=1.13.0,<2.0.0",
    "pgvector>=0.4.0,<1.0.0",
    
    # Caching & Task Queue
    "redis>=6.0.0,<7.0.0",
    "celery>=5.5.0,<6.0.0",
    
    # AI/ML
    "anthropic>=0.60.0,<1.0.0",
    "openai>=1.0.0,<2.0.0",
    "tiktoken>=0.8.0,<1.0.0",
    "langchain>=0.3.0,<1.0.0",
    "langchain-anthropic>=0.3.0,<1.0.0",
    "langchain-openai>=0.3.0,<1.0.0",
    
    # Authentication
    "supabase>=2.0.0,<3.0.0",
    "python-jose[cryptography]>=3.0.0,<4.0.0",
    "passlib[bcrypt]>=1.7.0,<2.0.0",
    "python-multipart>=0.0.10,<1.0.0",
    
    # Document Processing
    "pypdf>=4.0.0,<6.0.0",
    "python-docx>=1.0.0,<2.0.0",
    "openpyxl>=3.0.0,<4.0.0",
    "python-magic>=0.4.0,<1.0.0",
    "Pillow>=10.0.0,<12.0.0",
    "pytesseract>=0.3.0,<1.0.0",
    
    # Utilities
    "httpx>=0.25.0,<1.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "structlog>=24.0.0,<25.0.0",
    "tenacity>=8.0.0,<10.0.0",
    "cachetools>=5.0.0,<6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<9.0.0",
    "pytest-asyncio>=0.20.0,<1.0.0",
    "pytest-cov>=5.0.0,<7.0.0",
    "pytest-mock>=3.0.0,<4.0.0",
    "black>=24.0.0,<26.0.0",
    "ruff>=0.5.0,<1.0.0",
    "mypy>=1.0.0,<2.0.0",
    "pre-commit>=3.0.0,<5.0.0",
    "ipython>=8.0.0,<9.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.black]
line-length = 88
target-version = ['py312']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true